# wheeled_bipedal_simulator

./: CMakeLists.txt  package.xml
config/: joint_names_my_robot_self_cal.yaml
launch/: display.launch.py  gazebo.launch.py
meshes/: LF_knee_link.STL  LR_knee_link.STL  RF_knee_link.STL  RF_leg_link.STL
scripts/: tf_listener.py
urdf/: wheeled_bipedal_robot.csv  wheeled_bipedal_robot.urdf
wheeled_bipedal_bringup/: CMakeLists.txt  package.xml
wheeled_bipedal_bringup/config/: wheeled_bipedal_controllers.yaml
wheeled_bipedal_bringup/launch/: bringup.launch.py  gazebo.launch.py
wheeled_bipedal_bringup/rviz/: gazebo_sim.rviz
wheeled_bipedal_bringup/worlds/: RMUC2024_world.world  exploration_world1.world
wheeled_bipedal_controllers/: CMakeLists.txt  package.xml  wheeled_bipedal_controller_plugin.xml
wheeled_bipedal_controllers/include/wheeled_bipedal_controllers/: LQR.h  QuaternionEKF.h  VMC.h  ins_task.h  kalmanFilter.h  kinematics.h  pid_controller.hpp  structural_params.h  utils.h  wheeled_bipedal_controller.hpp
wheeled_bipedal_controllers/src/: LQR.cpp  QuaternionEKF.cpp  VMC.cpp  ins_task.cpp  kalmanFilter.cpp  kinematics.cpp  pid_controller.cpp  structural_params.cpp  utils.cpp  wheeled_bipedal_controller.cpp
wheeled_bipedal_description/: CMakeLists.txt
wheeled_bipedal_description/config/: joint_names_my_robot_self_cal.yaml
wheeled_bipedal_description/launch/: gazebo.launch.py
wheeled_bipedal_description/meshes/: LF_leg_link.STL  LF_lower_link.STL  LF_upper_link.STL  LR_lower_link.STL  LR_upper_link.STL  RF_lower_link.STL  RF_upper_link.STL  RR_leg_link.STL  RR_lower_link.STL  RR_upper_link.STL  left_wheel_link.STL  right_wheel_link.STL
wheeled_bipedal_description/rviz/: urdf.rviz
wheeled_bipedal_description/scripts/: cal_extrinsic_R.py  generate_trapezoid.py  inertia_to_geometry.py  tf_invert.py  tf_listener.py
wheeled_bipedal_description/urdf/: gazebo_ros2_control.xacro  real_ros2_control.xacro  sensors.xacro  wheeled_bipedal_robot.csv  wheeled_bipedal_robot.urdf
wheeled_bipedal_hardware/: CMakeLists.txt  package.xml  wheeled_bipedal_hardware_interface.xml
wheeled_bipedal_hardware/include/wheeled_bipedal_hardware/: CanSerialCore.hpp  can_hardware_interface.hpp  crc.hpp  packages.hpp  serial_core.hpp  wheeled_bipedal_hardware_interface.hpp
wheeled_bipedal_hardware/scripts/: calibrate_accel_scale.py  calibrate_imu.py  imu_bias_calculator.py
wheeled_bipedal_hardware/src/: CanSerialCore.cpp  can_hardware_interface.cpp  serial_test.cpp  wheeled_bipedal_hardware_interface.cpp
